--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nora-php/Nora.DI",
+    "name": "nora-php/di",
     "authors": [
         {
             "name": "Hajime MATSUMOTO",
